# pharm-ai

./: .env.example  Dockerfile  README.md  TRADEOFFS.md  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 24c19f4934d7_initial_schema.py  a0213c3b2e91_add_error_message_column.py
app/: tasks.py  worker.py
app/agent/: __init__.py  agent.py  models.py  tools.py
app/api/: dependencies.py  main.py
app/application/: substitution_service.py
app/core/: config.py  database.py  exceptions.py  logging.py  models.py  retry.py
app/domain/: patient_safety.py  therapeutic_alternatives.py
app/infrastructure/: drug_repository.py  llm.py  rxclass_client.py
app/ingestion/: checkpoint.py  chunker.py  embedder.py  openfda_client.py  pipeline.py  repository.py
app/retrieval/: retrieval.py
frontend/: Dockerfile
infrastructure/: rxclass_client.py
scripts/: discover_class_ids.py  test_agent.py  test_retrieval.py
tests/evaluation/: baseline.json  eval_retrieval.py  retrieval_golden.json
tests/unit/: conftest.py  test_patient_safety.py  test_rxclass_client.py  test_substitution_service.py  test_therapeutic_alternatives.py
