[project]
name = "pharm-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "celery>=5.6.3",
    "fastapi[standard]>=0.136.3",
    "google-genai>=2.7.0",
    "pgvector>=0.4.2",
    "pydantic-ai>=1.105.0",
    "redis>=8.0.0",
    "ruff>=0.15.15",
    "sqlalchemy[asyncio]>=2.0.50",
]

[dependency-groups]
dev = [
    "aiosqlite>=0.22.1",
    "anyio>=4.13.0",
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "pytest-httpx>=0.36.2",
    "ruff>=0.15.15",
]


[tool.ruff]
line-length = 105
target-version = "py313"
exclude = [
    ".venv",
    "alembic/versions/**",
    "alembic/env.py",
    "tests",
]

[tool.ruff.lint]
select = ["E", "F", "I"]  # pycodestyle, pyflakes, isort

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"
pythonpath = "."